kubernetes/ibbitot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibbitot-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ibbitot
  template:
    metadata:
      labels:
        app: ibbitot
    spec:
      containers:
      - name: ibbitot
        image: registry.baileys.dev/ibbitot:latest
