kubernetes/ibbitot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ibbitot-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: "isbaileybutlerintheoffice.today"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ibbitot-service
                port:
                  number: 8080
