kubernetes/ibbitot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibbitot-service
spec:
  selector:
    app: ibbitot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ibbitot-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: "isbaileybutlerintheoffice.today"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ibbitot-service
                port:
                  number: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibbitot-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ibbitot
  template:
    metadata:
      labels:
        app: ibbitot
    spec:
      containers:
        - name: ibbitot
          image: registry.baileys.dev/ibbitot:latest
          imagePullPolicy: Always
